--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <input type="text" placeholder="give me an image" id="input">
+    <button class="classify">Classify</button>
+
+    <div class="ladiv"></div>
+
+    <div class="resultat"></div>
     
     <script src="script.js"></script>
 </body>
